[package]
name = "sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
ignore = "0.4"
digest = "0.9.0"
blake3 = {version = "1.0.0", features=["traits-preview"]}
serde = {version = "1.0", features=["derive"]}
serde_yaml = "0.8"
hex = "0.4.3"